# goit-pyweb-hw-08

goit-pyweb-hw-08/: find_name_tag.py  insert.py  models.py  pyproject.toml  redis_decor.py
goit-pyweb-hw-08/RabbitMQ/: consumer.py  models_2.py  producer.py
goit-pyweb-hw-08/RabbitMQ_2/: consumer_email.py  consumer_sms.py  models_3.py  producer_2.py
